Fixed email form spacing

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -392,7 +392,6 @@ nav.main .buttons .signup {
   background-color: #2b1860;
   border-radius: 1em;
   border-color: rgba(242, 242, 242, 0.8);
-  margin-top: 1.2em;
   margin-bottom: 10px;
   margin-right: 0;
   padding: 0.3em 1em 0.3em 1em;
